--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,11 @@ torch = "^2.5.1"
 lightning = "^2.5.0.post0"
 jupyter = "^1.1.1"
 torchvision = "^0.20.1"
+opencv-python = "^4.10.0.84"
+pandas = "^2.2.3"
+ultralytics = "^8.3.56"
+torchview = "^0.2.6"
+graphviz = "^0.20.3"
 
 
 [build-system]
