Add some transforms tests (WIP), renaming DetectionDataset and small fixes

--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 dataloader:
   batch_size: 64
   dataset:
-    cls: "LVISDataset"
+    cls: "DetectionDataset"
     image_dir: "{root}/{dataset}/{split}/images"
     label_dir: "{root}/{dataset}/{split}/labels"
     transform_params:
