--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,9 @@ torchview = "^0.2.6"
 graphviz = "^0.20.3"
 
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.4"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
