--- a/config.yaml
+++ b/config.yaml
@@ -16,4 +16,11 @@ dataloader:
         contrast: 0.0
         hue: 0.0
         saturation: 0.0
-trainer: null
+train:
+  input_image_size: 512
+  num_classes: 1203
+  anchors: 
+    - [10, 13, 16, 30, 33, 23] # stride 8
+    - [30, 61, 62, 45, 59, 119] # stride 16
+    - [116, 90, 156, 198, 373, 326] # stride 32
+  strides: [8, 16, 32]
