--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,10 @@ pandas = "^2.2.3"
 ultralytics = "^8.3.56"
 torchview = "^0.2.6"
 graphviz = "^0.20.3"
+torchmetrics = "^1.6.1"
+pycocotools = "^2.0.8"
+faster-coco-eval = "^1.6.5"
+tensorboard = "^2.18.0"
 
 
 [tool.poetry.group.dev.dependencies]
